# hotssh

./: MAINTAINERS  MANIFEST.in  Makefile-decls.am  Makefile-libgssh.am  Makefile-src.am  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  hotssh.csh  hotssh.desktop  hotssh.desktop.in  hotssh.doap  hotssh.sh  hotwire-ssh.desktop  hotwire-ssh.sh  setup.py  waf  wscript
hotssh/: sshwindow.py  version.py
hotssh/hotlib/: timesince.py
hotssh/hotlib_ui/: msgarea.py  quickfind.py
libgssh/: gssh-channel-input-stream.c  gssh-channel-input-stream.h  gssh-channel-output-stream.c  gssh-channel-output-stream.h  gssh-channel-private.h  gssh-channel.c  gssh-channel.h  gssh-connection-private.h  gssh-connection.c  gssh-connection.h  gssh-enum-types.c.template  gssh-enum-types.h.template  gssh-types.h  gssh.h  libssh-porting.txt
po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  bs.po  ca.po  cs.po  da.po  de.po  el.po  en_CA.po  es.po  fi.po  fr.po  gl.po  he.po  hu.po  id.po  it.po  ja.po  lv.po  nb.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sr@latin.po  sv.po  tr.po  wscript_build  zh_CN.po
src/: app-menu.ui  gears-menu.ui  hotssh-app.c  hotssh-app.h  hotssh-hostdb.c  hotssh-hostdb.h  hotssh-password-interaction.c  hotssh-password-interaction.h  hotssh-prefs.c  hotssh-prefs.h  hotssh-search-provider.c  hotssh-search-provider.h  hotssh-search-provider.ini  hotssh-tab.c  hotssh-tab.h  hotssh-win.c  hotssh-win.h  hotssh.desktop  hotssh.gresource.xml  main.c  org.gnome.hotssh.SearchProvider.service  org.gnome.hotssh.gschema.xml  prefs.ui  tab.ui  window.ui
(+2 files in other folders)
